release: 25.0 (#491)
* release: set version to 25.0
* build: target java 11 for mosaic-utils and mosaic-geomath to stay compatible with other internal projects
* fix: remove getBorderIds